  ``extract(epoch from '1970-01-01T00:00:01')`` returns ``1.0`` seconds.

- Add max_token_length parameter to whitespace tokenizer.

- Statistics for jobs and operations are enabled by default. If you don't need
  any statistics, please set ``stats.enabled`` to ``false``.

- ``ALTER TABLE <name> OPEN`` will now wait for all shards to become active
  before returning to be consistent with the behaviour of other statements.

- CrateDB is now based on Elasticsearch 6.1.3 and Lucene 7.1.0.

- Added a new ``bengali`` language analyzer and a ``bengali_normalization``
  token filter.

- Added new ``cluster.routing.allocation.disk.watermark.flood_stage`` setting,
  that controls at which disk usage indices should become read-only to prevent
  running out of disk space. There is also a new node check that indicates
  whether the threshold is exceeded.

- Added new tokenizers ``simple_pattern`` and ``simple_pattern_split`` which
  allow to tokenize text for the fulltext index by a regular expression pattern.

- Changed ``BEGIN`` and ``SET SESSION`` to no longer require ``DQL``
  permissions on the ``CLUSTER`` level.

- Implemented a `Ready` node status JMX metric expressing if the node is ready
  for processing SQL statements.

Fixes
=====

- Fixed an issue where a null pointer exception would be thrown when trying to
  move reroute shards to/from non-data nodes using ``ALTER TABLE REROUTE``.

- Fixed an issue that causes ``JOINS`` with certain ``ORDER BY`` constructs to
  fail.

- Fixed an issue that would cause queries and data manipulation statements with
  explicit ``WHERE`` conditions to throw ``NullPointerException`` when running
  against a table with a composite primary key.

- Fixed a race condition that could cause the decommissioning of nodes using
  the graceful shutdown procedure to interrupt the execution of active queries.

- Read only queries should no longer fail with a ``TableUnknownException`` or
  ``IndexNotFoundException`` in case of a shard relocation.