@@ -37,7 +37,10 @@ public interface FuncArg {
 
     /**
      * Indicates whether a Symbol can be casted or not.
-     * Typically, we only allow casting of Literals.
+     * Typically, we only allow casting of Literals, but for example
+     * even if casting a column to the Literal type is not allowed,
+     * casting two columns when used on both sides of an operator or
+     * function is allowed.
      * Note: Convertibility checks have to be performed nevertheless.
      *       This just indicates whether casting is allowed.
      * @return True is casting is possible, false otherwise.
